--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "Web share target",
+  "short_name": "Share!",
   "theme_color": "#8844bb",
   "background_color": "#8844bb",
   "display": "browser",
@@ -7,42 +8,42 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "images/icons/icon-72x72.png",
+      "src": "/images/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-96x96.png",
+      "src": "/images/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-128x128.png",
+      "src": "/images/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-144x144.png",
+      "src": "/images/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-152x152.png",
+      "src": "/images/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-192x192.png",
+      "src": "/images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-384x384.png",
+      "src": "/images/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "images/icons/icon-512x512.png",
+      "src": "/images/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -50,6 +51,7 @@
   "splash_pages": null,
   "share_target": {
     "action": "/process.html",
+    "method": "GET",
     "params": {
       "title": "name",
       "text": "description",
