All your images belongs to me

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -59,7 +59,7 @@
       "files": [
         {
           "name": "shared_image",
-          "accepts": "image/jpeg"
+          "accept": ["image/*"]
         }
       ]
     }
